hot gadgets done

--- a/index.html
+++ b/index.html
@@ -164,20 +164,31 @@
           </div>
     </div>
 
-    <div class="container Categories">
-        <div>
-            <h3 class="cat">Categories</h3>
-        </div>
-        <div class="col-md-3 float-left">
-            <img class="cat1" src="images/Categories/bag.png" alt="">
-        </div>
-        <div class="col-md-3 float-left">
-            <img class="cat2" src="images/Categories/perfume.png" alt="">
-            <img class="cat2" src="images/Categories/shoe.png" alt="">
-        </div>
-        <div class="col-md-4 float-left">
-            <img src="images/Categories/pale-order.png" alt="">
-        </div>
+    <div class="container categories">
+       <div>
+          <h3 class="cat">Categories</h3>
+      </div>
+      <div class="row align-items-center">
+      <div class="col-md-3">
+          <div class="img1">
+            <img src="images/Categories/bag.png" alt="">
+            <h4>Bag</h4>
+          </div>
+      </div>
+      <div class="col-md-3">
+          <div class="img2">
+            <img src="images/Categories/perfume.png" alt="">
+            <h4>Beauty</h4>
+          </div>
+          <div class="img2">
+            <img src="images/Categories/shoe.png" alt="">
+            <h4>Shoes</h4>
+          </div>
+      </div>
+      <div class="col-md-6">
+          <img class="img3" src="images/Categories/pale-order.png" alt="">
+      </div>
+       </div>
     </div>
 
 
