--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <div class="carousel-item">
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <h1>Mackbook Pro</h1>
+                        <h1>Google Home</h1>
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.</p>
                         <button class="buy-now-button">Buy Now>></button>
                     </div>
@@ -59,7 +59,7 @@
               <div class="carousel-item">
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <h1>Mackbook Pro</h1>
+                        <h1>JBL Bluetooth Speaker</h1>
                         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.</p>
                         <button class="buy-now-button">Buy Now>></button>
                     </div>
